examples/invalid/11_named_function_missing_result_type.lane
// invalid: named functions must state their result type
module Examples.Invalid11

pub fn id(value : Int) {
  value
}
